--- a/internship/templates/patient_dashboard.html
+++ b/internship/templates/patient_dashboard.html
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="#">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Settings</a>
+                    <a class="nav-link" href="{% url "patient_blog_list" %}">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url "logout" %}">Logout</a>
