--- a/internship/templates/patient_dashboard.html
+++ b/internship/templates/patient_dashboard.html
@@ -15,13 +15,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" href="{% url 'list_doctors' %}">Book Appointment</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url "patient_blog_list" %}">Blog</a>
+                    <a class="nav-link" href="{% url 'patient_blog_list' %}">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url "logout" %}">Logout</a>
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
             </ul>
         </div>
@@ -37,7 +37,6 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4">
-                                <!-- In your template (e.g., patient_dashboard.html or doctor_dashboard.html) -->
                                 <img src="{{ user.profile_picture.url }}" class="img-fluid rounded-circle" alt="Profile Picture">
                             </div>
                             <div class="col-md-8">
@@ -53,6 +52,35 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- Upcoming Appointments Section -->
+        <div class="mt-5">
+            <h3>Upcoming Appointments</h3>
+            {% if upcoming_appointments %}
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Doctor</th>
+                            <th>Date</th>
+                            <th>Start Time</th>
+                            <th>End Time</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for appointment in upcoming_appointments %}
+                        <tr>
+                            <td>{{ appointment.doctor.username }}</td>
+                            <td>{{ appointment.date|date:"Y-m-d" }}</td>
+                            <td>{{ appointment.start_time }}</td>
+                            <td>{{ appointment.end_time }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                <p>No upcoming appointments.</p>
+            {% endif %}
         </div>
     </div>
 
